idea/testData/multiplatform/whenExhaustivenessForSealed/commonA/commonA.kt
class CommonAImplTestClass: <!SEALED_INHERITOR_IN_DIFFERENT_MODULE!>TestClass<!>()